--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "chai-and-backend",
   "version": "1.0.0",
   "description": "backend is here",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "author": "Ans Sattar",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
